add the paragraph under h1

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="jumbotron">
             <h1>PIG-DICE</h1>
             <img src="img/download.jpeg" alt="a photo of a dice">
-            dffdasa
+            <p>Get started!!</p>
         </div>
     </div>
     
