--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <div class="form-group">
                             <label for="player2name">Player 2 name :</label>
                             <input type="text" class="form-control"id="player2name">
-        
+                            <input type="button" value="START" id="START">
                         </div>
                         <div class="row">
                             <div class="col-xs-6">
